<resources>
    <string name="app_name">Teaching Toddlers</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="Enter">Enter</string>
    <string name="enter_your_email_to_recover_your_password">Enter your email to recover your password:</string>
    <string name="create_an_account">create an account</string>
    <string name="register_user">Register User</string>
    <string name="e_mail">E-Mail</string>
    <string name="uta_id">UTA ID</string>
    <string name="createPassword">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profession">Profession</string>
    <string name="admin_setup">Admin Setup</string>
    <string name="child_setup">Child Setup</string>
    <string name="child_first_name">First Name</string>
    <string name="child_last_name">Last Name</string>
    <string name="_5_7_years_old">5-7 years old</string>
    <string name="_3_5_years_old">3-5 years old</string>
    <string name="_1_3_years_old">1-3 years old</string>
    <string name="choose_age_range">Choose Age Range</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>