<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSetup">

    <Button
        android:id="@+id/registeruser"
        android:layout_width="290dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="88dp"
        android:text="@string/register_user"
        android:textSize="18sp"
        android:visibility="visible"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/e_mail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/utaid"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/uta_id"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PW"
        android:layout_width="356dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="336dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="656dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="166dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profession"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profession"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="137dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/admin_setup"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="416dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
